crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__no_fields.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {},
      {},
      {},
      {},
      {},
      {},
      {},
      {},
      {},
      {}
    ]
  }
]
