crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_array_column.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "series": [
          1,
          2,
          3,
          4,
          5
        ]
      }
    ]
  }
]
