crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_array_column_nested_types.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": "The organization RC Model Airplane Enthusiasts has 2 committees, the largest of which has 3 members."
      },
      {
        "result": "The organization Argonauts' Alumni Association has 1 committees, the largest of which has 4 members."
      }
    ]
  }
]
