crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_array_composite_field.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "name": {
          "name": "Frodo",
          "popularity": "3"
        },
        "characters": {
          "members": [
            {
              "name": "Legolas",
              "popularity": "200"
            },
            {
              "name": "Gimli",
              "popularity": "300"
            }
          ],
          "name": "Fellowship"
        }
      }
    ]
  }
]
