crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_array_variable.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": 2
      }
    ]
  },
  {
    "rows": [
      {
        "result": 3
      }
    ]
  }
]
