crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_composite_column.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": {
          "thing_a": {
            "field_a": 1,
            "field_b": 2
          },
          "thing_b": {
            "field_b": 2,
            "field_c": 3
          }
        }
      }
    ]
  }
]
